[tool.poetry]
name = "flask_ribbon"
version = "0.1.0"
description = ""
authors = ["Sierra Taylor Moxon <sierra.taylor@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
Flask = "1.1.2"
flask-restplus = ">0.10.1"
jupyter = "^1.0.0"
pandas = "^1.3.3"
simplejson = "^3.17.5"
Werkzeug = "0.16.1"
pysolr = "^3.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
